# parametric-screw-generator

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  apply_drive.py  architecture.md.txt  docker-compose.yml  drive.py  export.py  head.py  preview.py  preview_drives.py  preview_screws.py  preview_shafts.py  preview_thread_regions.py  preview_threads.py  preview_threads_gallery.py  pyproject.toml  railway.json  requirements-pip.txt  requirements.txt  run_web.py  screw_assembly.py  shaft.py  spec.py  test_drive.py  test_head.py  test_orientation.py  test_preview_shafts.py  test_screw_assembly.py  test_shaft.py  threads.py
frontend/: .env.example  README.md  auth.ts  middleware.ts  package-lock.json  package.json
outputs/: drive_combo_gallery.step  drive_hex_3.step  drive_hex_3.stl  drive_phillips_4.step  drive_phillips_4.stl  drive_torx_6.step  drive_torx_6.stl  head_button.step  head_button.stl  head_button__drive_hex.step  head_button__drive_hex.stl  head_button__drive_phillips.step  head_button__drive_phillips.stl  head_button__drive_torx.step  head_button__drive_torx.stl  head_button__hex_section_d12.step  head_button__hex_section_d6.step  head_button__hex_section_d8.step  head_button__phillips_section_d12.step  head_button__phillips_section_d6.step  head_button__phillips_section_d8.step  head_button__torx_section_d12.step  head_button__torx_section_d6.step  head_button__torx_section_d8.step  head_button_d12_h6__drive_hex.step  head_button_d12_h6__drive_hex.stl  head_button_d12_h6__drive_phillips.step  head_button_d6_h3__drive_hex.stl  (+389 more)
(+47 files in other folders)
