[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screwgen"
version = "0.1.0"
description = "Parametric screw generator using CadQuery/OpenCascade."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cadquery>=2.6",
  "pytest>=9.0",
  "fastapi",
  "uvicorn",
  "reportlab",
  "svglib",
  "python-multipart",
  "Pillow",
  "opencv-python-headless",
]

[tool.setuptools.packages.find]
where = ["src"]

