[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screwgen"
version = "0.1.0"
description = "Parametric fastener generator with chat-based web UI, powered by CadQuery/OpenCascade."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cadquery>=2.6",
  "fastapi",
  "uvicorn",
  "python-multipart",
  "reportlab",
  "svglib",
  "Pillow",
  "opencv-python-headless",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
